--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
   <!-- reset.css -->
   <link rel="stylesheet" href="./common/reset.css">
   <!-- font.css -->
@@ -18,12 +22,14 @@
     <div class="wrapper">
       <header>
         <h1>불면증 증상 척도(Insomnia Severity Index)</h1>
-        <div class="Pinfo">
-          <ul>
-            <li>날짜 : </li>
-            <li>성명 : </li>
-            <li>등록번호 : </li>
-          </ul>
+        <div class="item">
+          <div class="Pinfo">
+            <ul>
+              <li>날짜 : </li>
+              <li>성명 : </li>
+              <li>등록번호 : </li>
+            </ul>
+          </div>
         </div>
       </header>
       <main>
@@ -44,7 +50,7 @@
           </div>
           <div class="question q-1">
             <h2>잠자리에 누운 후 잠드는데 30분 이상 걸린다.</h2>
-              <ul>
+              <ul class=>
                 <li><input type="radio" name="q1" value="0"></li>
                 <li><input type="radio" name="q1" value="1"></li>
                 <li><input type="radio" name="q1" value="2"></li>
@@ -54,7 +60,7 @@
           </div>
           <div class="question q-2">
             <h2>잠이 들고 얼마 지나지 않아 깬다.<br /> 다시 잠들기 힘들다.</h2>
-            <ul>
+            <ul class="Q">
               <li><input type="radio" name="q2" value="0"></li>
               <li><input type="radio" name="q2" value="1"></li>
               <li><input type="radio" name="q2" value="2"></li>
@@ -115,17 +121,22 @@
         </div>
       </main>
       <article>
+
         <input type="button" value="합계" onclick="questionSum">
+        <div class="form-group col-md-6">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      </div>
       </article>
       <footer></footer>
     </div>
   </div>
 </body>
-<script>
+<!-- <script>
   function questionSum() {
     
   }
   const radio = document.getElementsByTagName('input').value;
   console.log();
-</script>
+</script> -->
 </html>
